@@ -1,5 +1,5 @@
 #!/bin/sh
-#    Copyright (C) 1999 Free Software Foundation, Inc.
+#    Copyright (C) 1999, 2002 Free Software Foundation, Inc.
 #
 # This file is free software; as a special exception the author gives
 # unlimited permission to copy and/or distribute it, with or without
@@ -9,19 +9,24 @@
 # WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
 # implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 
-
+PGM=ksba-config
+libs="@KSBA_CONFIG_LIBS@"
+cflags="@KSBA_CONFIG_CFLAGS@"
 prefix=@prefix@
 exec_prefix=@exec_prefix@
+includes=""
+libdirs=""
 exec_prefix_set=no
-
-ksba_libs="@KSBA_LIBS@"
-ksba_cflags="@KSBA_CFLAGS@"
+echo_libs=no
+echo_cflags=no
+echo_prefix=no
+echo_exec_prefix=no
 
 
 usage()
 {
 	cat <<EOF
-Usage: ksba-config [OPTIONS]
+Usage: $PGM [OPTIONS]
 Options:
 	[--prefix[=DIR]]
 	[--exec-prefix[=DIR]]
@@ -87,17 +92,23 @@ fi
 if test "$echo_cflags" = "yes"; then
     if test "@includedir@" != "/usr/include" ; then
       includes="-I@includedir@"
-      for i in $ksba_cflags ; do
+      for i in $cflags ; do
 	if test "$i" = "-I@includedir@" ; then
 	  includes=""
 	fi
       done
     fi
-    echo $includes $ksba_cflags
+    echo $includes $cflags
 fi
 
 if test "$echo_libs" = "yes"; then
-    echo ${ksba_libs}
+    if test "@libdir@" != "/usr/lib" ; then
+      libdirs="-L@libdir@"
+      for i in $libs ; do
+	if test "$i" = "-L@libdir@" ; then
+	  libdirs=""
+	fi
+      done
+    fi
+    echo $libdirs $libs
 fi
-
-
